<resources>
    <string name="app_name">Pandroid démo</string>

    <string name="navigation_events">Bus d\'événements</string>
    <string name="navigation_scanner">Scanner</string>
    <string name="navigation_rest">Réseau</string>
    <string name="navigation_animation">Animation</string>
    <string name="navigation_list">QuickHeader - ListView</string>
    <string name="navigation_recycler">RecyclerView</string>

    <string name="submit">Subimt</string>

    <string name="event_title">Exemple Bus d\'événement</string>
    <string name="event_send_object_string">Envoyer le texte</string>
    <string name="event_text_to_send">Message à envoyer</string>
    <string name="event_send_to">Envoyer au 2e fragment</string>
    <string name="event_open_second_fragment">Ouvrir le deuxième fragment</string>
    <string name="event_send_tag">Envoyer avec un tag</string>


    <string name="animation_resize">Touch to resize</string>
    <string name="animation_rotate">Touch to rotate</string>
    <string name="animation_open_material">Open Matérial Fragment</string>


    <string name="scanner_permission_camera_rationale">L\'accès à la camera est nécessaire pour la détection</string>


    <string name="list_header_listview">HEADER LISTVIEW</string>
    <string name="list_header_scrollview">HEADER SCROLLVIEW</string>
    <string name="list_header_disable">Désactiver le header</string>
    <string name="list_header_enable">Activer le header</string>
    <string name="list_header_show">Afficher le header</string>
    <string name="list_header_hide">Afficher à 0.5</string>
    <string name="navigation_simplelist">SimpleAdapter</string>
    <string name="toast_normal">Normal</string>
    <string name="toast_icon">With icon</string>
    <string name="toast_loader">With Loader</string>
    <string name="toast_action">With action</string>
    <string name="navigation_toast">Toast</string>
    <string name="mvp">MVP</string>

    <string name="toggle_visibility">Toggle Visibilty</string>
    <string name="product_id">Id</string>
    <string name="product_name">Name</string>
    <string name="animation_load">Start loading</string>
    <string name="rx">Rx Android</string>
    <string name="opener_new_fragment">Open new fragment</string>
    <string name="opener_home">back_home</string>
    <string name="navigation_opener">Opener navigation</string>
    <string name="navigation_list_kotlin">Kotlin Adapter DSL</string>


</resources>
