<?xml version="1.0" encoding="utf-8"?>
<com.leroymerlin.pandroid.ui.animation.view.AnimatedLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/toast_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toast_normal" />

    <Button
        android:id="@+id/toast_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toast_icon" />

    <Button
        android:id="@+id/toast_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toast_action" />

    <Button
        android:id="@+id/toast_loader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toast_loader" />
</com.leroymerlin.pandroid.ui.animation.view.AnimatedLinearLayout>