<?xml version="1.0" encoding="utf-8"?>
<com.leroymerlin.pandroid.ui.animation.view.AnimatedLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

<!-- tag::QuickHeaderLayout[] -->
    <com.leroymerlin.pandroid.ui.list.QuickHeaderLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <!-- The first view is the scrollable one -->
        <ListView
            android:id="@+id/list_lv"
            android:padding="@dimen/small_spacing"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <!-- The second layout is the view you want to use as a header -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/pandroid_gray"
            android:gravity="center"
            android:text="@string/list_header_listview" />
    </com.leroymerlin.pandroid.ui.list.QuickHeaderLayout>
    <!-- end::QuickHeaderLayout[] -->

    <com.leroymerlin.pandroid.ui.list.QuickHeaderLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/list_header_qhl">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/list_header_btn_disable"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:text="@string/list_header_disable"
                    android:background="@color/pandroid_red" />

                <Button
                    android:id="@+id/list_header_btn_enable"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:text="@string/list_header_enable"
                    android:background="@color/pandroid_green" />

                <Button
                    android:id="@+id/list_header_btn_hide"
                    android:text="@string/list_header_hide"

                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/pandroid_gray" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:id="@+id/list_header_btn_show"

                    android:text="@string/list_header_show"

                    android:background="@color/pandroid_blue" />


            </LinearLayout>
        </ScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/pandroid_gray"
            android:gravity="center"
            android:text="@string/list_header_scrollview" />

    </com.leroymerlin.pandroid.ui.list.QuickHeaderLayout>


</com.leroymerlin.pandroid.ui.animation.view.AnimatedLinearLayout>