<?xml version="1.0" encoding="utf-8"?>
<com.leroymerlin.pandroid.ui.animation.view.AnimatedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/animation_root_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/animation_tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:text="@string/navigation_animation"
            android:textColor="@color/pandroid_red"
            android:textSize="@dimen/xlarge_text" />


        <TextView
            android:id="@+id/animation_resize"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/pandroid_red"
            android:gravity="center"
            android:text="@string/animation_resize"
            android:textColor="@color/white"
            android:textSize="@dimen/xlarge_text" />

        <TextView
            android:id="@+id/animation_rotate"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/pandroid_green"
            android:gravity="center"
            android:text="@string/animation_rotate"
            android:textColor="@color/white"
            android:textSize="@dimen/xlarge_text" />
<!-- tag::vectorCompat[] -->
        <com.leroymerlin.pandroid.ui.support.PandroidCompatButton
            android:id="@+id/animation_btn_material"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/animation_open_material"
            app:drawableLeftPCompat="@drawable/ic_error_outline_24dp"
            app:drawableTintPCompat="@color/pandroid_green"/>
<!-- end::vectorCompat[] -->

        <ImageView
            android:id="@+id/animation_iv_material"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pandroid_ic_launcher" />

        <com.leroymerlin.pandroid.ui.animation.view.CircularFrameLayout
            android:id="@+id/animation_circular"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:centerOn="@+id/animation_test_btn4"
            app:clipOut="true"
            app:revealRadius="100dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/pandroid_gray_dark" />

            <Button
                android:id="@+id/animation_test_btn"
                android:layout_width="70dp"
                android:layout_height="70dp" />

            <Button
                android:id="@+id/animation_test_btn1"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="right" />

            <Button
                android:id="@+id/animation_test_btn2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="bottom" />

            <Button
                android:id="@+id/animation_test_btn3"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="bottom|right" />

            <Button
                android:id="@+id/animation_test_btn4"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center" />


        </com.leroymerlin.pandroid.ui.animation.view.CircularFrameLayout>

        <com.leroymerlin.pandroid.ui.animation.view.ProgressButtonLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/animation_btn_load"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/animation_load" />
        </com.leroymerlin.pandroid.ui.animation.view.ProgressButtonLayout>
    </LinearLayout>
</com.leroymerlin.pandroid.ui.animation.view.AnimatedScrollView>